--- a/stylesheet.css
+++ b/stylesheet.css
@@ -327,7 +327,7 @@ textarea {
   text-align: center;
   float: left;
   padding-top: 60px;
-  margin-left: 150px;
+  margin-left: 200;
   margin-right: 100px;
   line-height: 40px;
 }
